--- a/src/config.yml
+++ b/src/config.yml
@@ -1,3 +1,5 @@
+changeInventory: false
+
 chat-globalSyntax: '%player% > %message%'
 chat-localSyntax: '%player% > %message%'
 chat-globalMessage: '&8[&6G&8] '
@@ -5,6 +7,8 @@ chat-localMessage: '&8[&aL&8] '
 chat-cooldown: 3
 
 donatorsEnabled: true
+
+dropItem: false
 
 oldPvP: true
 
