--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,7 @@
 alwaysDay: true
 
 changeInventory: true
+changeWeather: true
 
 chat-globalSyntax: '%player% > %message%'
 chat-localSyntax: '%player% > %message%'
@@ -14,27 +15,29 @@ dropItem: true
 
 fallDamage: true
 
-oldPvP: true
+keepInventory: true
 
-changeWeather: true
+lobby: true
+
+oldPvP: true
 
 tablistTag-header: '&fОнлайн игроков: &a%online% &fиз &a%onlineMAX%'
 tablistTag-footer: '&e&lFLUXMBER.RU'
 tablistTag:
-    PREFIX-DEVELOPER: '&8[&bDEV&8]&f '
-    PREFIX-ADMIN: '&8[&4&lADMIN&8]&f '
-    PREFIX-YOUTUBE: '&8[&f&lYOUTUBE&8]&f '
-    PREFIX-CURATORBUILDER: '&8[&c&lC&f&l.&2&lBUILDER&8]&f '
-    PREFIX-BUILDER: '&8[&2&lBUILDER&8]&f '
-    PREFIX-CURATORMODERATOR: '&8[&c&lC&f&l.&b&lMODER&8]&f '
-    PREFIX-MODERATOR: '&8[&d&lMODER&8]&f '
-    PREFIX-HELPER: '&8[&3&lHELPER&8]&f '
-    PREFIX-FLUX: '&8[&e&lFLUX&8]&f '
-    PREFIX-DIAMOND: '&8[&b&lDIAMOND&8]&f '
-    PREFIX-EMERALD: '&8[&a&lEMERALD&8]&f '
-    PREFIX-GOLD: '&8[&6&lGOLD&8]&f '
-    PREFIX-IRON: '&8[&7&lIRON&8]&f '
-    PREFIX-COAL: '&8[&0&lCOAL&8]&f '
+    PREFIX-DEVELOPER: '&f '
+    PREFIX-ADMIN: '&f '
+    PREFIX-YOUTUBE: '&f '
+    PREFIX-CURATORBUILDER: '&f '
+    PREFIX-BUILDER: '&f '
+    PREFIX-CURATORMODERATOR: '&f '
+    PREFIX-MODERATOR: '&f '
+    PREFIX-HELPER: '&f '
+    PREFIX-FLUX: '&f '
+    PREFIX-DIAMOND: '&f '
+    PREFIX-EMERALD: '&f '
+    PREFIX-GOLD: '&f '
+    PREFIX-IRON: '&f '
+    PREFIX-COAL: '&f '
     PREFIX-DEFAULT: '&f'
     NAME-DEVELOPER: DEVELOPER
     NAME-ADMIN: ADMIN
@@ -50,4 +53,5 @@ tablistTag:
     NAME-GOLD: GOLD
     NAME-IRON: IRON
     NAME-COAL: COAL
+    NAME-DEFAULT: DEFAULT
     NAME-DEFAULT: DEFAULT
